--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
       <link rel="stylesheet" href="styles/style.css" type="text/css">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Amanda and Melissa's Ideabox</title>
+    <title>2DoBox-Pivot</title>
   </head>
   <body>
     <section id="user-input-form-section" class="main-section">
-      <h1 id="ideabox-title-text">idea<span>box</span></h1>
+      <h1 id="ideabox-title-text">2do<span>box</span></h1>
       <form id="user-input-form">
         <label for="title-input">Title</label>
-        <label for="description-input">Body</label>
+        <label for="description-input">Task</label>
         <input id ="title-input" class="single-line-input" type="text" name="title-input" placeholder="Title">
-        <textarea id="description-input" class="multi-line-input" type="text" name="description-input" placeholder="Body" rows="20" cols="10" wrap="soft"></textarea>
+        <textarea id="description-input" class="multi-line-input" type="text" name="description-input" placeholder="Task" rows="20" cols="10" wrap="soft"></textarea>
         <button id="save-button" class="rectangular-blue-button" type="input">save</button>
       </form>
     </section>
