Add sort, and show completed TODOs buttons. Format completed task button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <input id ="title-input" class="single-line-input" type="text" name="title-input" placeholder="Title">
         <textarea id="description-input" class="multi-line-input" type="text" name="description-input" placeholder="Body" rows="20" cols="10" wrap="soft"></textarea>
         <button id="save-button" class="rectangular-blue-button" type="input">save</button>
+        <button id="sort" class="rectangular-blue-button" type="input">Sort TODOs</button>
+        <button id="show-complete" class="rectangular-blue-button" type="input">Show Complete TODOs</button>
       </form>
     </section>
     <section id="idea-box-section" class="main-section">
