Add an event listener to the show completed tasks button that on click, hides all the cards currently shown, then loops through local storage pulling out and parsing each card, and only appending those that have a value of true for the completed property

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Amanda and Melissa's Ideabox</title>
   </head>
   <body>
-    <section id="user-input-form-section" class="main-section">
+    <header id="user-input-form-section" class="main-section">
       <h1 id="ideabox-title-text">idea<span>box</span></h1>
-      <form id="user-input-form">
+      <section id="user-input-form">
         <label for="title-input">Title</label>
         <label for="description-input">Body</label>
         <input id ="title-input" class="single-line-input" type="text" name="title-input" placeholder="Title">
@@ -19,8 +19,8 @@
         <button id="save-button" class="rectangular-blue-button" type="input">save</button>
         <button id="sort" class="rectangular-blue-button" type="input">Sort TODOs</button>
         <button id="show-complete" class="rectangular-blue-button" type="input">Show Complete TODOs</button>
-      </form>
-    </section>
+      </section>
+    </header>
     <section id="idea-box-section" class="main-section">
       <form id="search-input-form">
         <label for="search-input">Search</label>
