Changed prependIdea function to remove redundant classes and IDs, changed CSS and the rest of the .js file to match

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header id="user-input-form-section" class="main-section">
-      <h1 id="ideabox-title-text">idea<span>box</span></h1>
+      <h1 id="ideabox-title-text">2do<span>box</span></h1>
       <section id="user-input-form">
         <label for="title-input">Title</label>
         <label for="description-input">Task</label>
