Change all 'idea' to 'todo', importance text needs work

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header id="user-input-form-section" class="main-section">
-      <h1 id="ideabox-title-text">2do<span>box</span></h1>
+      <h1 id="todobox-title-text">2do<span>box</span></h1>
       <section id="user-input-form">
         <label for="title-input">Title</label>
         <label for="description-input">Task</label>
@@ -21,12 +21,12 @@
         <button id="show-complete" class="rectangular-blue-button" type="input">Show Complete TODOs</button>
       </section>
     </header>
-    <section id="idea-box-section" class="main-section">
+    <section id="todo-box-section" class="main-section">
       <form id="search-input-form">
         <label for="search-input">Search</label>
         <input id="search-input" class="single-line-input" type="text" name="search-input" placeholder="Search">
       </form>
-      <section id="idea-card-section">
+      <section id="todo-card-section">
       </section>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
