Complete sort by importance function

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
           <textarea id="description-input" class="multi-line-input" type="text" name="description-input" placeholder="Task" rows="20" cols="10" wrap="soft"></textarea>
         </form>
         <button id="save-button" class="rectangular-blue-button" type="input">save</button>
-        <button id="sort" class="rectangular-blue-button" type="input">Sort TODOs</button>
         <button id="show-complete" class="rectangular-blue-button" type="input">Show Complete TODOs</button>
         <button id="all-todos" class="rectangular-blue-button" type="input">Show More TODOS</button>
+        <div class="sort-container">
+           <button id="none" class="rectangular-blue-button importance-button" type="input">None</button>
+          <button id="low" class="rectangular-blue-button importance-button" type="input">low</button>
+          <button id="normal" class="rectangular-blue-button importance-button" type="input">Normal</button>
+          <button id="high" class="rectangular-blue-button importance-button" type="input">High</button>
+          <button id="critical" class="rectangular-blue-button importance-button" type="input">Critical</button>
+        </div>
       </section>
     </header>
     <section id="todo-box-section" class="main-section">
