--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
           <label for="description-input">Task</label>
           <input id ="title-input" class="single-line-input" type="text" name="title-input" placeholder="Title">
           <textarea id="description-input" class="multi-line-input" type="text" name="description-input" placeholder="Task" rows="20" cols="10" wrap="soft"></textarea>
+          <p class="charCount">0</p>
         </form>
-        <button id="save-button" class="rectangular-blue-button" type="input">save</button>
+        <button id="save-button" class="rectangular-blue-button" type="input" disabled="true">save</button>
         <button id="show-complete" class="rectangular-blue-button" type="input">Show Complete TODOs</button>
         <button id="all-todos" class="rectangular-blue-button" type="input">Show More TODOS</button>
         <div class="sort-container">
